--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,10 @@ not displayed. The information between the BODY and /BODY tags is displayed.-->
 <!-- The information between the BODY and /BODY tags is displayed.-->
 <body>
 	<div id="box">
-		test box
+		<a>First</a>
+		<a>Second</a>
+		<a>Third</a>
+		<a>Fourth</a>	
 	</div>
 <h1>Enter the main heading, usually the same as the title.</h1>
 <p>Be <b>bold</b> in stating your key points. Put them in a list: </p>
